fixed completion bar on mobile

--- a/components/TasksDone.module.css
+++ b/components/TasksDone.module.css
@@ -8,9 +8,3 @@
   padding-bottom: 15px;
   max-width: 430px;
 }
-
-.completion_bar_2 {
-  display: flex;
-  padding-top: 3px;
-  padding-bottom: 15px;
-}
